<resources>
    <string name="app_name">CarGasMileageEstimator</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPassword</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_home">CarGasMileageEstimator</string>
    <string name="title_home">Home</string>
    <string name="title_addFuel">Add Fuel</string>
    <string name="title_statistics">Statistics</string>
    <string name="title_settings">Settings</string>
    <string name="title_testDrive">Car Details</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="hello">Hello World, SimpleMileageActivity!</string>
    <string name="unit_selection_label">Unit:</string>
    <string name="distance_label">Distance travelled:</string>
    <string name="total_distance_label">Total Distance travelled:</string>
    <string name="distance_units">miles</string>
    <string name="gas_label">Gas Remaining:</string>
    <string name="gas_units">gallons</string>
    <string name="range_label">Range:</string>
    <string name="range_units">miles</string>
    <string name="mileage_label">Mileage:</string>
    <string name="mileage_units">mpg</string>
    <string name="total_gas_label">Total Gas Utilized:</string>
    <string name="total_gas_cost">Total Gas Cost (US)$2.56/gallon:</string>
    <string name="start_label">Start Tracking</string>
    <string name="pause_label">Pause Tracking</string>
    <string name="resume_label">Resume Tracking</string>
    <string name="stop_label">Stop Tracking</string>
    <string name="email_label">Email Records</string>

    <string name="track_tab_label">Track Mileage</string>
    <string name="export_tab_label">Export Data</string>


    <style name="ButtonText">
        <item name="android:layout_width">fill_parent</item>
        <item name="android:layout_height">wrap_content</item>
        <item name="android:textColor">#FFFFFF</item>
        <item name="android:gravity">center</item>
        <item name="android:layout_margin">3dp</item>
        <item name="android:textSize">30dp</item>
        <item name="android:textStyle">bold</item>
        <item name="android:shadowColor">#000000</item>
        <item name="android:shadowDx">1</item>
        <item name="android:shadowDy">1</item>
        <item name="android:shadowRadius">2</item>
    </style>
</resources>
